data/all_generated_tests/raw_wast_tests/unreachable_IncorrectBranchTargetResolution_928.wast
;; 9. **Test Description:** Put `unreachable` within a `br` that targets an outer block enclosing a `try-catch` structure, verifying correct handling of the branch target within exception handling contexts.    *Constraint Checked:* Accurate branch resolution in presence of `try-catch`.    *Relation to Incorrect Branch Target Resolution:* Confirms correct branch destination, not misidentified due to exception handling.

(assert_invalid
  (module (func $br_unreachable_in_try
    (block $outer
      (try
        (do (br $outer (unreachable)))
        (catch (nop))
      )
    )
  ))
  "branch target invalid"
)